# Onstrument

./: --filter-pattern error OR Error OR ERROR OR failed OR Failed OR FAILED   .cursorignore  .dockerignore  .env  .env.production  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  README.md  Readme.md  deploy.sh  deps.txt  eslint.config.js  gitignore  index.html  nodemon.json  package-lock.json  package.json  program-id.json  program-keypair.json  program.dump  render.yaml  rust-toolchain.toml  schema.sql  ssm-policy.json  tailwind.config.js  test-wallet.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/workflows/: deploy.yml
backend/: .env  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  constants.ts  index.ts  init.ts  server.ts
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: App.tsx  config.ts  env.d.ts  global.d.ts  index.html  index.tsx  polyfills.ts
frontend/components/: Wallet.tsx
frontend/config/: constants.ts
frontend/contexts/: AuthContext.ts
frontend/hooks/: useAuthQuery.ts  useScrollLock.ts  useSubscription.ts
frontend/services/: TokenTransactionService.ts  advancedOrdersService.ts  bondingCurve.ts  dexService.ts  feeService.ts  filterService.ts  holderTrackingService.ts  migrationService.ts  pinataService.ts  priceClient.ts  priceService.ts  tokenService.ts  userService.ts  websocketService.ts
frontend/styles/: main.css  tokenomics.css
frontend/types/: errors.ts
frontend/utils/: formatting.ts  headers.ts  logger.ts  network.ts
migrations/: YYYYMMDDHHMMSS_add_bonding_curve_config.sql
programs/bonding_curve/: Cargo.toml
programs/bonding_curve/src/: lib.rs
programs/bonding_curve/src/instructions/: buy.rs  create_metadata.rs  create_token.rs  migrate.rs  mod.rs  price.rs  sell.rs
programs/bonding_curve/src/state/: bonding_curve.rs  curve_config.rs  events.rs  mod.rs
programs/bonding_curve/src/utils/: constants.rs  error.rs  metadata.rs  mod.rs  validation.rs
scripts/: generateBondingCurveKeypair.js  generateBondingCurveKeypair.ts  generateViteEnv.ts  testAwsAccess.ts
server/: .env  index.ts  package.json  tsconfig.json
server/src/: app.ts  index.ts
shared/types/: common.ts  token.ts  (+1 more)
src/: App.tsx  config.ts  index.tsx  polyfills.ts
styles/: main.css
terraform/: backend.tf  config.json  dns.tf  frontend.tf  github-actions.tf  loadbalancer.tf  main.tf  networking.tf  outputs.tf  variables.tf
(+166 files in other folders)
