[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
solana-program = "=1.18.17"
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = "=0.30.1"
mpl-token-metadata = "=3.2.3"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.1.3", features = ["no-entrypoint"] }
bincode = "=1.3.3"
serde = { version = "1.0", features = ["derive"] }
mpl-token-auth-rules = { version = "=1.5.1", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
